# itrading

./: .gitignore  README.md  advanced_stock_picker.py  ai_stock_analyzer.py  base_stock_picker.py  config.py  pyproject.toml  requirements.txt  rxconfig.py  tdx_servers_config.json  unify_stock_pick_ai_analyzer.py
.github/: copilot-instructions.md
docs/: 1_before_open_pick_adjust_stocks.md  3_investment_portfolio.md  advanced_picker_premarket_update.md  ai_stock_analyzer_simplification_summary.md  api_priority_adjustment_summary.md  csv_score_formatting_fix.md  edge_cases_fixes_summary.md  implementation_summary.md  pick_push_webchat.md  premarket_stock_picker_fix.md  reflex_integration_summary.md  trading_day_utils_implementation.md  tushare_api_integration.md  unify_implementation_summary.md
itrading/: __init__.py  itrading.py
tests/: demo_unified_analyzer.py  test_base_advanced_stock_picker.py  test_cons_utils.py  test_demo.py  test_edge_cases.py  test_gemini.py  test_matplotlib_chinese_fonts.py  test_reflex_app.py  todo.md
utils/: util.py
